tests/snapshots/snapshots_git__clean.snap
---
source: tests/snapshots_git.rs
expression: out
---
GitBranch = main
GitSha = [SHA]
GitRootDir = [TMPDIR]
GitStatus = 
GitChanges = 
GitStaged = 
GitUnstaged = 
GitUntracked = 
GitConflicts = 
GitInsertions = 
GitDeletions = 
GitAheadBehind = 
GitOriginOwner = 
GitOriginRepo = 
GitOriginOwnerRepo = 
GitUpstreamOwner = 
GitUpstreamRepo = 
GitUpstreamOwnerRepo = 
GitIsFork =
